<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="action_novalista">Nova Lista</string>
    <string name="action_historico">Ver histórico</string>
    <string name="action_config">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="editText_nomeProduto">Nome do produto</string>
    <string name="button_add">Adicionar Produto</string>
    <string name="action_addProduto">Add Produto</string>
    <string name="title_activity_nova_lista_compras">NovaListaComprasActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editText_quantidade">Quantidade</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="action_editalista">Editar Lista</string>
    <string name="action_limparbd">Limpar base de dados</string>
    <string name="finalizar_compra">Finalizar Compra</string>
</resources>
