<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.natanael.listadecompras.MainActivity">
    <item
        android:id="@+id/action_addProduto"
        android:orderInCategory="100"
        android:title="@string/action_addProduto"
        android:visible="false"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_editalista"
        android:orderInCategory="100"
        android:title="@string/action_editalista"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_novalista"
        android:orderInCategory="100"
        android:title="@string/action_novalista"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_limparbancodados"
        android:orderInCategory="100"
        android:title="@string/action_limparbd"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sair"
        android:orderInCategory="100"
        android:title="@string/action_sair"
        app:showAsAction="never" />
</menu>
