<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.natanael.listadecompras.AddProdutoActivity">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/editText_nomeProduto"
                android:ems="10"
                android:id="@+id/editText_nomeproduto" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/editText_quantidade"
                android:ems="10"
                android:id="@+id/editText_quantidade" />

        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancelar"
            android:id="@+id/button_cancelarAddItem"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:id="@+id/button_addItem"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
